# refraction

atom-server/: Cargo.toml
dump/: .gitignore  Cargo.toml  README.md
dump/dumped/: README.md
dump/src/: config.rs  feed.rs  imap_session.rs  imap_to_feed.rs  lib.rs  main.rs  readability.rs
imap-read/: Cargo.toml
imap-read/src/: main.rs
pragmatic/: Cargo.toml
pragmatic/src/: main.rs
refraction/: Cargo.toml
refraction/capture/: Cargo.toml  TODO.md  gmail.toml
refraction/capture/src/: async_imap.rs  config.rs  imap.rs  lib.rs  meli_imap.rs
spikes/abstract-over-stream/: Cargo.toml
spikes/abstract-over-stream/src/: config.rs  imap_session.rs  main.rs
spikes/atom-server/: Cargo.toml
spikes/atom-server/src/: main.rs
spikes/gmail-fetch/: Cargo.toml
spikes/gmail-fetch/src/: config.rs  imap_session.rs  main.rs
spikes/imap-read/src/: main.rs
spikes/pragmatic/: Cargo.toml
spikes/pragmatic/src/: main.rs
spikes/try-async/: Cargo.toml
