[package]
name = "dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "2.4.1"
imap-proto = "0.10.2"
native-tls = "0.2.11"
quoted_printable = "0.4.6"
atom_syndication = "0.12.0"
chrono = "0.4.23"
