[package]
name = "refraction"
version = "0.1.0"
edition = "2021"

[lib]
name = "refraction"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "2.4.1"
imap-proto = "0.10.2"
native-tls = "0.2.11"
quoted_printable = "0.4.6"
atom_syndication = "0.12.0"
mail-parser = "0.8.0"
md5 = "0.7.0"
readable-readability = "0.4.0"
serde = { version="1.0.152", features = ["derive"] }
toml = "0.5.10"
chrono = "0.4.23"