[package]
name = "imap-read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-imap = { version = "0.6.0", default-features=false, features = ["runtime-tokio"] }
futures = "0.3.21"
async-native-tls = { version = "0.4.0", default-features=false, features = ["runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
